# id-hub-contracts

./: .gitignore  .gitmodules  CIRCOM.md  HOW_TO_ADD_NEW_VERIFIERS_TO_ROUTER.txt  HOW_TO_PREPROC_ZK_FOR_FRONTEND.md  LICENSE  README.md  abi.json  hardhat.config.js  out  out.wtns  package-lock.json  package.json  proof.json  proving.key  serialization.md  serialization.txt  tmp.out  tmp.proof.json  tmp.proving.key  tmp.verifying.key  tmp.witness  verification.key  witness
contracts/: AddLeafBig.sol  AddLeafSmall.sol  AntiSybilStore.sol  AssertLeafContainsCredentialsVerifier.sol  AssertLeafContainsCredsVerifier.sol  AssertLeafFromAddressVerifier.sol  CredentialAdder.sol  Hub.sol  HubBatch.sol  HumanIDPayments.sol  IPaidProofV3.sol  IVerifier.sol  IsUSResident.sol  MerkleTree.sol  PaidProofV3.sol  Pairing.sol  PairingAndProof.sol  ProofRouter.sol  ResidencyStore.sol  Roots.sol  SybilResistance.sol  antiSybil.verifier.sol  onAddLeaf.verifier.sol  proofOfResidency.verifier.old.sol  proofOfResidency.verifier.sol  proofOfResidency.verifier.sol.old  quinaryMerkleProof.verifier.sol
contracts/stellar/human-id/contracts/sbt/: Cargo.toml
contracts/stellar/human-id/contracts/sbt/src/: admin.rs  constants.rs  errors.rs  lib.rs  storage_types.rs  test.rs  verifier.rs
docs/: CNAME
scripts/: circom-run.sh  deploy-da.js  deploy-v3.js  deploy.js  transfer-ownership.js
tasks/: deployMerkleTree.js
test/: AntiSybilStore.js  CredentialAdder.js  ElGamal.js  Hub.js  HumanIDPayments.t.sol  IsUSResident.js  Lock.js  MerkleTree.js  PaidProof.js  ProofRouter.js  ResidencyStore.js  (+5 more)
(+271 files in other folders)
